# automap

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.old.md  docker-compose.yml  environment.yml  main.py  pyproject.toml
agents/: cq_generator_agent.py  cq_to_sparql_agent.py  cq_validator_agent.py  entity_agent.py  mapper_agent.py  ontology_entity_planner.py  prefix_agent.py  refiner_agent.py  relationship_agent.py  schema_agent.py  schema_alignment_agent.py  yarrrml_agent.py  yarrrml_coordinator.py
automap/converters/: __init__.py  map2rml.py  rml2graph.py
automap/grapheval/: __init__.py  compute_metrics.py
automap/grapheval/metrics/: __init__.py  base.py  basic_metrics.py  domain_metrics.py  evaluator.py  hierarchy.py  object_metrics.py  property_metrics.py
automap/methods/examples/: manual.py
automap/methods/llm_base/: basic.py
automap/postprocess/: postprocess.py
automap/preprocess/: preprocess.py
automap/rdf_turtle_light/: README.md  demo.py  examples.py  rdf_turtle_light.py
automap/utils/: __init__.py  annotations.py  auth.py  config.py  eval2tabular.py  eval2wandb.py  eval_extractor.py  file.py  printers.py  scores.py
config/: prefixes.py  settings.py  structured_output.py  yarrrml_examples.py
data/: checkpoints.py
data/input/hofer-imdb/: ontology.ttl
data/input/hofer-imdb/diamond/: movie_data.csv
data/output/run_20260527_123946/: cqs.txt  eval_metrics.json  final_mapping.yaml  knowledge_graph.nt  shacl_report.txt  shacl_shapes.ttl  sparql_validation.json  sparql_validation.txt  temp_mapping.ttl
data/output/run_20260527_123946/debug/: attempt_1.yaml  attempt_1_entities.yaml  attempt_1_intermediate.yaml  attempt_1_prefixes.yaml  attempt_2.yaml  attempt_2_after_links.yaml  attempt_2_entities.yaml  diff_1_to_2.txt
evaluation/: analyze_results.py  metrics.py  run_experiment.py
graph/: nodes.py  workflow.py
resources/: exp_bin_template.sh
scripts/: install.sh  job_automap.sh  slurm-913607.out  test_torch.py
tools/: rml_tools.py
validation_hofer-et-al/: README.md  compare_my_pipeline.py
