[project]
name = "llm-agents-rml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-api>=0.7.60",
    "langgraph-cli>=0.2.6",
    "morph-kgc>=2.3.1",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "rdflib>=7.6.0",
    "streamlit>=1.45.0",
    "yatter>=2.0.3",
    "pyyaml>=6.0",
    "pyoxigraph>=0.3.22",
    "pyshacl>=0.31.0",
]